# SIMAP

./: .gitignore  README.md  company_profile.json  enriched_projects.json  pyproject.toml  requirements.txt  simap.py  simaptest.ipynb
azure_func_simap_agent/: __init__.py
azure_function/simap_timer/: __init__.py
simap_agent/: __main__.py  config.py  enricher.py  main.py  simap_client.py  slack_client.py
tests/: test_simap.py
